# dm-project

./: Clean_data_Hiep (1).ipynb  EDA.ipynb  README.md  Train.ipynb  app.py  clean_data.ipynb  clean_data_Hiệu.ipynb  cleandata.ipynb  cleaned_data (2).csv  cleaned_data_Hiep.csv  data_cleaner.py  dirty_sample_500.csv  dirty_sample_500_worse_plus.csv  eda_analyzer.py  eda_dng.ipynb  improved_cleaner.py  improved_eda.py  maintenance_clean.csv  maintenance_fe.csv  nmk.ipynb  pre.ipynb  predictive_maintenance_dirty_dataset.csv  pyproject.toml  requirements.txt  run.bat  sample_dirty_data.csv  streamlit_app_improved.py  thuong.ipynb  utils.py
clean_data_Dong/: cleaned.csv  eda_dng.ipynb
pages/: 1_Data_Upload.py  2_Data_Overview.py  3_Generate_Dirty_Data.py  4_Data_Cleaning.py  5_Export_Data.py
utils/: data_cleaner.py  data_processor.py  dirty_data_generator.py  visualizer.py
